# Kashiwagi_LifeGame

./: LICENSE  README.md  pyproject.toml
src/LifeGame/: scripts.py
