[build-system]
requires = ["setuptools>=60.2.0"]
build-backend = "setuptools.build_meta"


[project]
name = "LifeGame"
version = "0.0.0"
description = "This repository contains the LifeGame processes that develop by KutoKashiwagi."

readme = "README.md"
license = {file="LICENSE"}

requires-python = ">=3.10"
dependencies = [
]

authors = [
    {name="AtoKashinoki", email="atokashinoki@gmail.com"},
]
classifiers = [
    "Programming Language :: Python :: 3.10",
    "License :: OSI Approved :: MIT License",
]


[project.urls]
"Homepage" = "https://github.com/swimmy-hachioji/LifeGame"
"Bug Tracker" = "https://github.com/AtoKashinoki/CodingTools2/issues"


[project.scripts]
LifeGame = "LifeGame.scripts:LifeGame"
